--- a/ui/client/stylesheets/dc-meteor.css
+++ b/ui/client/stylesheets/dc-meteor.css
@@ -1,6 +1,7 @@
 /* CSS declarations go here */
 body {
     margin:0;
+    min-height: 920px;
 }
 
 .header {
@@ -33,15 +34,29 @@ body {
 }
 
 .footer {
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    width:100%;
+    bottom:0;
     background-color: #27556C;
     height: 6em;
     line-height: 6em;
     vertical-align: middle;
     color: #6E92A1;
+    border-top:inset;
+    border-top-color: firebrick;
+    border-top-width: .2em;
 }
 
 body > div:nth-child(5) {
     display:none;
+}
+#contrast_circle {
+    position:absolute;
+    left:0;
+    top:2em;
+    z-index:0;
 }
 #heatmap {
     position:absolute;
