--- a/ui/client/stylesheets/dc-meteor.css
+++ b/ui/client/stylesheets/dc-meteor.css
@@ -72,10 +72,13 @@ body > div:nth-child(5) {
 }
 .sensor_list {
     width: 300px;
-    postion: absolute;
-    right: -20em;
-    top:2em;
-    -webkit-border-radius: 5px;
+    display: block;
+    float: right;
+    /* right: -20em; */
+    /* top: 2em; */
+    webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+    background-color: #6E91A1;
+    color: antiquewhite;
 }
