--- a/ui/client/stylesheets/dc-meteor.css
+++ b/ui/client/stylesheets/dc-meteor.css
@@ -84,3 +84,11 @@ body > div:nth-child(5) {
 .sensor_list li {
     list-style: none;
 }
+
+.heatmap { 
+  width:100%; height:100%; 
+}
+.heatmap-canvas {
+/*  width:100%; height:100%;*/
+  height:800px;
+}
