--- a/ui/client/stylesheets/dc-meteor.css
+++ b/ui/client/stylesheets/dc-meteor.css
@@ -86,9 +86,13 @@ body > div:nth-child(5) {
 }
 
 .heatmap { 
-  width:100%; height:100%; 
+  width:1000px;
+  height:800px; 
 }
 .heatmap-canvas {
 /*  width:100%; height:100%;*/
+  margin-left: 1px;
+  margin-top: 32px;
+  width:1000px;
   height:800px;
 }
