--- a/ui/client/stylesheets/dc-meteor.css
+++ b/ui/client/stylesheets/dc-meteor.css
@@ -70,7 +70,7 @@ body > div:nth-child(5) {
     top:2em;
     z-index:1;
 }
-.sensor_list {
+#sensor_wrapper {
     width: 300px;
     padding:2em 0;
     display: block;
@@ -81,11 +81,12 @@ body > div:nth-child(5) {
     -moz-border-radius: 5px;
     border-radius: 5px;
     background-color: #6E91A1;
+}
+.sensor_list {
+
     color: antiquewhite;
 }
-.sensors.ul {
 
-}
 .sensor_list li {
     list-style: none;
 }
