--- a/ui/client/stylesheets/dc-meteor.css
+++ b/ui/client/stylesheets/dc-meteor.css
@@ -56,35 +56,38 @@ body > div:nth-child(5) {
     position:absolute;
     left:0;
     top:2em;
-    z-index:0;
+    z-index:2;
+    display:block;
 }
-#heatmap {
-    position:absolute;
-    left:0;
-    top:2em;
-    z-index:0;
-}
+
 #floorplan {
     position:absolute;
     left:0;
     top:2em;
     z-index:1;
+    display:block;
 }
 #sensor_wrapper {
-    width: 300px;
-    padding:2em 0;
-    display: block;
-    float: right;
-    margin-top:3em;
-    margin-right:3em;
-    webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+    width:300px;
     background-color: #6E91A1;
+    webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    position:relative;
+    display: block;
+    top:5em;
+    right:4em;
+    float:right;
+    height:450px;
+    overflow:auto;
+    padding-top:10px;
+
 }
 .sensor_list {
-
+    margin:0 auto;
+    padding:0;
     color: antiquewhite;
+    width:280px;
 }
 
 .sensor_list li {
@@ -92,11 +95,18 @@ body > div:nth-child(5) {
 }
 .desc, .temp, .hum, .time {
     margin:5px;
+    border-right: 1px;
+    border-right-color: #27556C;
 }
 
 .heatmap { 
   width:1000px;
-  height:800px; 
+  height:800px;
+    position:absolute;
+    left:0;
+    top:2em;
+    z-index:0;
+    display:block;
 }
 .heatmap-canvas {
 /*  width:100%; height:100%;*/
@@ -104,4 +114,42 @@ body > div:nth-child(5) {
   margin-top: 32px;
   width:1000px;
   height:800px;
+}
+@media (max-width: 1000px) {
+    #sensor_wrapper {
+        float:none;
+        position:static;
+        bottom:5px;
+        width:400px;
+        margin:0 auto;
+    }
+}
+@media (max-width:850px ){
+    .header .sitename {
+        font-size: 1.5em;
+        line-height: 1em;
+    }
+    .logo img{
+        width:75px;
+    }
+    .header {
+        height:4em;
+
+    }
+
+}
+
+@media (max-width:500px ){
+    .header img {
+        width:40px;
+    }
+    .header .sitename {
+        font-size: 1em;
+        line-height: 1em;
+    }
+    .header {
+        height:2.5em;
+
+    }
+
 }
